# cuda_learn

./: CMakeLists.txt  My_kernel.cu  My_kernel.h  main.cpp
My_kernel/: CMakeLists.txt  My_kernel.cu  My_kernel.h
include/: cuda_tool.hpp
test_reduce/: CMakeLists.txt  test_reduce.cu  test_reduce.h
